--- a/eIVOGo/Views/DataView/printc0401pos.cshtml
+++ b/eIVOGo/Views/DataView/printc0401pos.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using System.Linq
+﻿@using System.Linq
 @using System.IO
 @using System.Linq.Expressions
 
@@ -19,67 +18,53 @@
 @using Uxnet.Web.WebUI
 @{
 
-    ModelSource<InvoiceItem> models;
-    IQueryable<DocumentPrintQueue> _model;
-    RenderStyleViewModel _viewModel;
+  ModelSource<InvoiceItem> models;
+  IQueryable<DocumentPrintQueue> _model;
+  RenderStyleViewModel _viewModel;
 
 
-    models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
-    _model = (IQueryable<DocumentPrintQueue>)this.Model;
-    _viewModel = ViewBag.ViewModel as RenderStyleViewModel;
-    if (_viewModel == null)
+  models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
+  _model = (IQueryable<DocumentPrintQueue>)this.Model;
+  _viewModel = ViewBag.ViewModel as RenderStyleViewModel;
+  if (_viewModel == null)
+  {
+    _viewModel = this.TempData["viewModel"] as RenderStyleViewModel;
+    if (_viewModel != null)
     {
-        _viewModel = this.TempData["viewModel"] as RenderStyleViewModel;
-        if (_viewModel != null)
-        {
-            ViewBag.ViewModel = _viewModel;
-        }
+      ViewBag.ViewModel = _viewModel;
     }
+  }
 }
 <!DOCTYPE html>
 <html>
+
 <head runat="server">
-    <title>電子發票系統</title>
-    <link href="../App_Themes/POSPrint/POS_eivo.css" rel="stylesheet" type="text/css" />
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <style type="text/css">
-        div.fspace {
-            height: 8.8cm;
-        }
-
-        div.bspace {
-            height: 8.9cm;
-        }
-
-        body, td, th {
-            font-family: Verdana, Arial, Helvetica, sans-serif, "細明體", "新細明體";
-        }
-    </style>
-    @*<script type="text/javascript" src="../Scripts/css3-multi-column.js"></script>*@
+  <title>電子發票系統</title>
+  <link href="../App_Themes/POSPrint/POS_eivo_v1.css" rel="stylesheet" type="text/css" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 </head>
-<body style="margin:0px;">
-    <form id="theForm" runat="server">
-        @{ 
-            var profile = Context.GetUser();
-            String invoicePrintView;
-            foreach (var item in _model.OrderBy(d => d.SubmitID).ToList())
-            {
-                invoicePrintView = _viewModel.UseCustomView == true
-                    ? item.CDS_Document.InvoiceItem.Organization.OrganizationCustomSetting?.Settings?.C0401POSView
-                    : null;
-                Html.RenderPartial(invoicePrintView ?? "~/Views/DataView/Module/C0401_POS.cshtml", item.CDS_Document.InvoiceItem);
-                models.MarkPrintedLog(item.CDS_Document.InvoiceItem, profile);
-            }
-        }
-    </form>
+
+<body>
+  <form id="theForm" runat="server">
+    @{
+      var profile = Context.GetUser();
+      String invoicePrintView;
+      foreach (var item in _model.OrderBy(d => d.SubmitID).ToList())
+      {
+        invoicePrintView = _viewModel.UseCustomView == true
+        ? item.CDS_Document.InvoiceItem.Organization.OrganizationCustomSetting?.Settings?.C0401POSView
+        : null;
+        Html.RenderPartial(invoicePrintView ?? "~/Views/DataView/Module/C0401_POS.cshtml", item.CDS_Document.InvoiceItem);
+        models.MarkPrintedLog(item.CDS_Document.InvoiceItem, profile);
+      }
+    }
+  </form>
 </body>
+
 </html>
 
 <script>
-    window.onload = function () {
-        window.print();
-    };
+  window.onload = function () {
+    window.print();
+  };
 </script>
-
-
-
