--- a/eIVOGo/App_Themes/POSPrint/POS_eivo_v1.css
+++ b/eIVOGo/App_Themes/POSPrint/POS_eivo_v1.css
@@ -33,7 +33,6 @@ body {
 .eivo__cutfield .code1 {
   margin: 0;
   padding: 0;
-  padding-top: 8px;
 }
 .eivo__cutfield .code1 img {
   width: 100%;
@@ -44,7 +43,6 @@ body {
   justify-content: space-around;
   margin: 0;
   padding: 0;
-  padding-top: 5px;
 }
 .eivo__cutfield .code2 img {
   width: 62px;
@@ -73,8 +71,16 @@ body {
   line-height: 1;
   text-align: center;
 }
+.eivo__block1 {
+  display: block;
+  height: 7px;
+}
+.eivo__block2 {
+  display: block;
+  height: 4px;
+}
 .eivo__deal {
-  padding-top: 5px;
+  padding-top: 4px;
 }
 .eivo__deal div {
   display: flex;
