--- a/eIVOGo/App_Themes/POSAllowance/POS_allowances_v1.css
+++ b/eIVOGo/App_Themes/POSAllowance/POS_allowances_v1.css
@@ -76,6 +76,8 @@ body {
 }
 .itemGroup__wrapper--border {
   border-top: 1px dashed #000000;
+  padding-top: 3px;
+  margin-top: 3px;
 }
 .text-nowrap {
   white-space: nowrap;
