--- a/eIVOGo/Views/DataView/PrintD0401.cshtml
+++ b/eIVOGo/Views/DataView/PrintD0401.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using System.Linq
+﻿@using System.Linq
 @using System.IO
 @using System.Linq.Expressions
 
@@ -18,35 +17,39 @@
 @using Model.Helper
 @using Uxnet.Web.WebUI
 @{
-    ModelSource<InvoiceItem> models;
-    IQueryable<DocumentPrintQueue> _model;
+  ModelSource<InvoiceItem> models;
+  IQueryable<DocumentPrintQueue> _model;
 
-    models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
-    _model = (IQueryable<DocumentPrintQueue>)this.Model;
+  models = ((SampleController<InvoiceItem>)ViewContext.Controller).DataSource;
+  _model = (IQueryable<DocumentPrintQueue>)this.Model;
 }
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>電子發票系統</title>
-    <link href="@VirtualPathUtility.ToAbsolute("~/App_Themes/Ver2016/eivo.css")" rel="stylesheet" type="text/css" />
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <title>電子發票系統</title>
+  <link href="@VirtualPathUtility.ToAbsolute("~/App_Themes/Ver2016/eivo.css")" rel="stylesheet" type="text/css" />
+  <link href="@VirtualPathUtility.ToAbsolute("~/App_Themes/POSAllowance/POS_allowances_v1.css")" rel="stylesheet" />
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 </head>
-<body style="font-family:KaiTi">
-    <form id="theForm" runat="server">
-        @{ 
-            var profile = Context.GetUser();
-            DocumentPrintQueue item;
-        }
-        @while ((item = _model.FirstOrDefault()) != null)
-        {
-            Html.RenderPartial("~/Views/DataView/Module/D0401.cshtml", item.CDS_Document.InvoiceAllowance);
-            models.MarkPrintedLog(item.CDS_Document.InvoiceAllowance, profile);
-        }
-    </form>
+
+<body>
+  <form id="theForm" runat="server">
+    @{
+      var profile = Context.GetUser();
+      DocumentPrintQueue item;
+    }
+    @while ((item = _model.FirstOrDefault()) != null)
+    {
+      Html.RenderPartial("~/Views/DataView/Module/D0401.cshtml", item.CDS_Document.InvoiceAllowance);
+      models.MarkPrintedLog(item.CDS_Document.InvoiceAllowance, profile);
+    }
+  </form>
 </body>
+
 </html>
 <script>
-    window.onload = function () {
-        window.print();
-    };
+  window.onload = function () {
+    window.print();
+  };
 </script>
