integrate project source

--- a/eIVOGo/Views/AllowanceProcess/Module/RedoQuery.cshtml
+++ b/eIVOGo/Views/AllowanceProcess/Module/RedoQuery.cshtml
@@ -17,8 +17,8 @@
 
 <script>
     $(function () {
-        uiAllowanceQuery.initQuery = true;
-        uiAllowanceQuery.inquire();
+        $inquiryAgent.initQuery = true;
+        $inquiryAgent.inquire();
     });
 </script>
 @{ 
