--- a/eIVOGo/Views/AllowanceProcess/Module/ResultAction.cshtml
+++ b/eIVOGo/Views/AllowanceProcess/Module/ResultAction.cshtml
@@ -72,6 +72,8 @@
                     <button type="button" class="btn" name="btnNotify" onclick="uiAllowanceQuery.notify();">重送開立通知</button>
 
                     Html.RenderPartial("~/Views/AllowanceProcess/Module/DoVoidAllowance.cshtml");
+                    Html.RenderPartial("~/Views/AllowanceProcess/Module/DoDeleteAllowance.cshtml");
+
                 }
             </td>
         </tr>
