--- a/eIVOGo/Views/Notification/Module/IssuedWinningInvoiceCBE.cshtml
+++ b/eIVOGo/Views/Notification/Module/IssuedWinningInvoiceCBE.cshtml
@@ -320,7 +320,7 @@
                 發票正本只能索取一次，一旦遺失，無法再次索取。
             </li>
             <li>
-                根據財政部「電子發票實施作業要點」規範，營業人將您的發票明細資料上傳到政府儲存，若您要至<a href="https://www.einvoice.nat.gov.tw/APCONSUMER/BTC601W/">財政部網站</a>查詢發票開立狀況，請輸入「發票號碼」及「發票日期」，即可查詢此張發票內容。
+                根據財政部「電子發票實施作業要點」規範，營業人將您的發票明細資料上傳到政府儲存，若您要至<a href="https://www.einvoice.nat.gov.tw/portal/btc/audit">財政部網站</a>查詢發票開立狀況，請輸入「發票號碼」及「發票日期」，即可查詢此張發票內容。
             </li>
         </ol>
         @if (_model.Organization.OrganizationExtension?.CustomNotification != null)
