--- a/eIVOGo/Views/Notification/Custom/16844527/InvoiceNotificationView.cshtml
+++ b/eIVOGo/Views/Notification/Custom/16844527/InvoiceNotificationView.cshtml
@@ -143,7 +143,7 @@
             @if (_model.InvoiceDonation == null)
             {
                 <text>
-                    本公司依據財政部「電子發票實施作業要點」使用雲端發票，您的發票明細資料將上傳至財政部<a href="https://www.einvoice.nat.gov.tw/APCONSUMER/BTC601W/">電子發票整合服務平台</a>，無論是個人載具發票或是會員載具託管發票，將不再另行寄送紙本發票。若會員載具託管發票中獎，本公司將依法於開獎日翌日起10日內以電子郵件通知發票中獎訊息，並提供電子發票證明聯紙本作為兌獎憑證。您可於發票開立48小時後，至財政部<a href="https://www.einvoice.nat.gov.tw/APCONSUMER/BTC601W/">電子發票整合服務平台</a>進行發票資料查詢。公司用電子發票證明聯亦請自行於財政部<a href="https://www.einvoice.nat.gov.tw/APCONSUMER/BTC601W/">電子發票整合服務平台</a>下載列印。
+                    本公司依據財政部「電子發票實施作業要點」使用雲端發票，您的發票明細資料將上傳至財政部<a href="https://www.einvoice.nat.gov.tw/portal/btc/audit">電子發票整合服務平台</a>，無論是個人載具發票或是會員載具託管發票，將不再另行寄送紙本發票。若會員載具託管發票中獎，本公司將依法於開獎日翌日起10日內以電子郵件通知發票中獎訊息，並提供電子發票證明聯紙本作為兌獎憑證。您可於發票開立48小時後，至財政部<a href="https://www.einvoice.nat.gov.tw/portal/btc/audit">電子發票整合服務平台</a>進行發票資料查詢。公司用電子發票證明聯亦請自行於財政部<a href="https://www.einvoice.nat.gov.tw/portal/btc/audit">電子發票整合服務平台</a>下載列印。
                 </text>
             }
             else
