--- a/eIVOGo/Views/Notification/Custom/70762419/InvoiceNotification.cshtml
+++ b/eIVOGo/Views/Notification/Custom/70762419/InvoiceNotification.cshtml
@@ -209,7 +209,7 @@
     <p>
         為響應環保及政府無紙化政策，本公司於110年1月1日起將不再提供紙本發票、紙本報表或帳單等。
         <br />
-        配合財政部B2B電子發票證明聯新格式法規規定，您的發票明細資料將上傳至財政部<a href="https://www.einvoice.nat.gov.tw/APCONSUMER/BTC601W/">電子發票整合服務平台</a>，
+        配合財政部B2B電子發票證明聯新格式法規規定，您的發票明細資料將上傳至財政部<a href="https://www.einvoice.nat.gov.tw/portal/btc/audit">電子發票整合服務平台</a>，
         如需列印，請直接開啟附件之發票列印檔另行列印即可。所列印的電子發票即為電子發票證明聯新格式，特此公告。
     </p>
     <p>&nbsp;</p>
